# serializer version: 1
# name: test_module_help_snapshot[argv0]
  '''
                                                                                  
   Usage: root migration [OPTIONS] COMMAND [ARGS]...                              
                                                                                  
   Audit a CRM migration source before import.                                    
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --help          Show this message and exit.                                  │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ audit              Audit a source export and report what would break on      │
  │                    import.                                                   │
  │ preflight          Audit CSV exports against a mapping and the target field  │
  │                    metadata.                                                 │
  │ plan               Write the signed import plan: batches, order, keys and    │
  │                    rollback note.                                            │
  │ reconcile          Compare sources against target dumps; write the reconcile │
  │                    workbook.                                                 │
  │ suggest-mapping    Propose a mapping draft for review (AI-MIG-1, suggestions │
  │                    only).                                                    │
  │ suggest-transform  Propose one value transform, validated on the samples     │
  │                    (AI-MIG-2).                                               │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
# name: test_module_help_snapshot[argv1]
  '''
                                                                                  
   Usage: root release [OPTIONS] COMMAND [ARGS]...                                
                                                                                  
   Diff sandbox vs production config manifests.                                   
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --help          Show this message and exit.                                  │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ diff      Diff two manifests and report blocking changes.                    │
  │ snapshot  Snapshot an org to config/zoho (normalized, sorted, redacted).     │
  │ drift     Diff approved manifests against live (or a file); flag unapproved  │
  │           drift.                                                             │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
# name: test_module_help_snapshot[argv2]
  '''
                                                                                  
   Usage: root workflow [OPTIONS] COMMAND [ARGS]...                               
                                                                                  
   Trace, lint and scenario-test workflow rules.                                  
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --help          Show this message and exit.                                  │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ simulate  Simulate rules against one record and report the trace.            │
  │ lint      Lint workflow rules for conflicts, loops, stale fields and dead    │
  │           rules.                                                             │
  │ test      Run a directory of given/when/then rule scenarios (UC-WF-2).       │
  │ draft     Draft one rule from a description and simulate it (UC-WF-4,        │
  │           AI-WF-1).                                                          │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
# name: test_module_help_snapshot[argv3]
  '''
                                                                                  
   Usage: root forms [OPTIONS] COMMAND [ARGS]...                                  
                                                                                  
   Prove a rebuilt form behaves like the original.                                
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --help          Show this message and exit.                                  │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ parity  Compare source and target form outputs over the answer cases.        │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
# name: test_module_help_snapshot[argv4]
  '''
                                                                                  
   Usage: root books [OPTIONS] COMMAND [ARGS]...                                  
                                                                                  
   Reconcile Books invoices against CRM deals.                                    
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --help          Show this message and exit.                                  │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ reconcile  Reconcile every deal against its invoices and report mismatches.  │
  │ explain    Narrate a recon report for the controller (template, or AI with   │
  │            --ai).                                                            │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
# name: test_module_help_snapshot[argv5]
  '''
                                                                                  
   Usage: root metrics [OPTIONS] COMMAND [ARGS]...                                
                                                                                  
   Check metric contracts over CRM/Books/People data.                             
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --help          Show this message and exit.                                  │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ check  Evaluate metric contracts for one audience.                           │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
# name: test_module_help_snapshot[argv6]
  '''
                                                                                  
   Usage: root timeline [OPTIONS] COMMAND [ARGS]...                               
                                                                                  
   Compose a client-safe timeline with contradiction review.                      
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --help          Show this message and exit.                                  │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ compose  Compose events chronologically and flag claim contradictions.       │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
# name: test_module_help_snapshot[argv7]
  '''
                                                                                  
   Usage: root lead-routing [OPTIONS] COMMAND [ARGS]...                           
                                                                                  
   Route inbound leads without sending anything.                                  
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --help          Show this message and exit.                                  │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ route  Route leads to queues; never merges, never sends.                     │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
# name: test_root_help_snapshot
  '''
                                                                                  
   Usage: root [OPTIONS] COMMAND [ARGS]...                                        
                                                                                  
   An implementation engineer's safety kit for Zoho.                              
                                                                                  
  ┌─ Options ────────────────────────────────────────────────────────────────────┐
  │ --live                              Read from Zoho via a named profile.      │
  │ --profile                   <str>   Named auth profile (see `zohokit auth    │
  │                                     login`).                                 │
  │ --format                    <str>   Default report format for every command. │
  │ --out                       <path>  Default report file for every command.   │
  │ --strict                            Exit 2 on blocking findings, every       │
  │                                     command.                                 │
  │ --ai                                AI suggestions (says 'AI disabled' when  │
  │                                     unconfigured).                           │
  │ --ai-allow-pii                      Send unredacted values to the AI         │
  │                                     provider (synthetic data only).          │
  │ --ai-max-tokens             <int>   Cap estimated AI prompt tokens.          │
  │ --baseline                  <path>  Accepted-findings file                   │
  │                                     (.zohokit-baseline.json).                │
  │ --max-api-calls             <int>   API call budget per run (default 200).   │
  │ --install-completion                Install completion for the current       │
  │                                     shell.                                   │
  │ --show-completion                   Show completion for the current shell,   │
  │                                     to copy it or customize the              │
  │                                     installation.                            │
  │ --help                              Show this message and exit.              │
  └──────────────────────────────────────────────────────────────────────────────┘
  ┌─ Commands ───────────────────────────────────────────────────────────────────┐
  │ version       Print the package version.                                     │
  │ diff-reports  Show new, resolved and changed findings between two reports.   │
  │ explain       Summarize a report in plain English (template, or AI with      │
  │               --ai).                                                         │
  │ modules       Inspect available modules.                                     │
  │ migration     Audit a CRM migration source before import.                    │
  │ release       Diff sandbox vs production config manifests.                   │
  │ workflow      Trace, lint and scenario-test workflow rules.                  │
  │ forms         Prove a rebuilt form behaves like the original.                │
  │ books         Reconcile Books invoices against CRM deals.                    │
  │ metrics       Check metric contracts over CRM/Books/People data.             │
  │ timeline      Compose a client-safe timeline with contradiction review.      │
  │ lead-routing  Route inbound leads without sending anything.                  │
  │ auth          Connect the toolkit to Zoho (read-only).                       │
  │ doctor        Check a profile before any live read.                          │
  │ cache         Manage the on-disk response cache.                             │
  └──────────────────────────────────────────────────────────────────────────────┘
  
  
  '''
# ---
